--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,10 @@ on: push
 jobs:
   build-node:
     runs-on: ubuntu-latest
-    container: node:17.6.0
+    container: node:16
     steps:
       - run: node --version
       - run: npm --version
+      - uses: actions/checkout@v3
+      - run: nnpm install
+      - run: node app.js
